<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>br.gov.mec</groupId>
	<artifactId>aghu-entidades</artifactId>
	<version>7.31-STABLE</version>
	<!-- procurar por '<entidades.versao>' para encontrar os pontos de substituicao 
		da versao do entidades -->

	<name>entidades: JAR Module</name>

	<properties>
		<aghu-core-commons.versao>3.3</aghu-core-commons.versao>
 		<aghu-core-test.versao>3.1</aghu-core-test.versao>  
 		<aghu-core-business.versao>3.7</aghu-core-business.versao>  
		<maven-pmd-plugin.version>3.3</maven-pmd-plugin.version>
		<pmd.version>5.2.2</pmd.version>
		<minimumPriority>2</minimumPriority>

		<!-- Configuracoes gerais -->
		<versao.fonte.java>1.7</versao.fonte.java>
		<versao.saida.java>1.7</versao.saida.java>
		<tipo.encoding>UTF-8</tipo.encoding>
		<arg.java.memoria>-Xms1024m -Xmx1024m -XX:MaxPermSize=768m</arg.java.memoria>
		<!-- Rodar no Windows XP -->
		<!--<arg.java.memoria>-Xms128m -Xmx256m -XX:MaxPermSize=400m</arg.java.memoria> -->
		<threadCount>100</threadCount>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- hibernate.version>4.0.1.Final</hibernate.version> <hibernate.search.version>4.0.0.Final</hibernate.search.version -->
		<version.compiler.plugin>3.2</version.compiler.plugin>
		<!-- maven-compiler-plugin -->
		<maven.compiler.target>1.7</maven.compiler.target>
		<maven.compiler.source>1.7</maven.compiler.source>
	</properties>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.wildfly.bom</groupId>
				<artifactId>jboss-javaee-7.0-with-hibernate</artifactId>
				<version>9.0.0.Beta2</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	
	<dependencies>
		<dependency>
			<groupId>br.gov.mec.aghu-core</groupId>
			<artifactId>aghu-core-commons</artifactId>
			<version>${aghu-core-commons.versao}</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>joda-time</groupId>
					<artifactId>joda-time</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.commons</groupId>
					<artifactId>commons-email</artifactId>
				</exclusion>
				<exclusion>
					<groupId>commons-beanutils</groupId>
					<artifactId>commons-beanutils</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>br.gov.mec.aghu-core</groupId>
			<artifactId>aghu-core-business</artifactId>
			<version>${aghu-core-business.versao}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hibernate.javax.persistence</groupId>
			<artifactId>hibernate-jpa-2.1-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-search</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
	        <groupId>log4j</groupId>
	        <artifactId>log4j</artifactId>
	        <version>1.2.16</version>
	        <scope>test</scope>
	    </dependency>
		<dependency>
			<groupId>org.quartz-scheduler</groupId>
			<artifactId>quartz</artifactId>
			<version>2.2.1</version>
			<scope>provided</scope>
		</dependency>
		
		<dependency>
			<groupId>br.gov.mec</groupId>
			<artifactId>aghu-testdb</artifactId>
			<version>2.0</version>
			<scope>test</scope>
			<exclusions>
			<exclusion>
			  	<groupId>br.gov.mec.aghu-core</groupId>
				<artifactId>aghu-core-business</artifactId>
		  	</exclusion>
		  </exclusions>
		</dependency>
		
		<dependency>
			<groupId>postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>8.4-701.jdbc4</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>com.oracle</groupId>
			<artifactId>ojdbc6</artifactId>
			<version>11.2.0.3.0</version>
			<scope>test</scope>			
		</dependency>
		
		<dependency>
			<groupId>br.gov.mec.aghu-core</groupId>
			<artifactId>aghu-core-test</artifactId>
			<version>${aghu-core-test.versao}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.enterprise</groupId>
			<artifactId>cdi-api</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	
	<build>
		<testResources>
          <testResource>
              <directory>${basedir}/src/test/resources</directory>
              <filtering>true</filtering>
          </testResource>
        </testResources>
		<plugins>
			<!-- Compiler plugin enforces Java compatibility and activates annotation 
				processors -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${version.compiler.plugin}</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<profiles>
		<profile>
			<id>PMD</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-pmd-plugin</artifactId>
						<version>${maven-pmd-plugin.version}</version>
						<dependencies>
							<dependency>
						      <groupId>net.sourceforge.pmd</groupId>
						      <artifactId>pmd-core</artifactId>
						      <version>${pmd.version}</version>
						    </dependency>
						    <dependency>
						      <groupId>net.sourceforge.pmd</groupId>
						      <artifactId>pmd-java</artifactId>
						      <version>${pmd.version}</version>
						    </dependency>
						    <dependency>
						      <groupId>net.sourceforge.pmd</groupId>
						      <artifactId>pmd-javascript</artifactId>
						      <version>${pmd.version}</version>
						    </dependency>
						    <dependency>
						      <groupId>net.sourceforge.pmd</groupId>
						      <artifactId>pmd-jsp</artifactId>
						      <version>${pmd.version}</version>
						    </dependency>
				   		</dependencies>
						<executions>
							<execution>
								<goals>
									<goal>check</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<argLine>${arg.java.memoria}</argLine>
							<targetJdk>1.7</targetJdk>
							<sourceEncoding>${tipo.encoding}</sourceEncoding>
							<threadCount>100</threadCount>
							<minimumPriority>${minimumPriority}</minimumPriority>
							<rulesets>
								<ruleset>.ruleset.xml</ruleset>
							</rulesets>
							<excludes>
								<exclude>**/test/**</exclude>
								<exclude>**/main/filters/**</exclude>
								<exclude>**/main/resources/**</exclude>
							</excludes>
							<excludeRoots>
								<excludeRoot>target</excludeRoot>
							</excludeRoots>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
